--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.8
+      - run: pip3 install poetry
       - run: poetry install --with test
       - run: poetry run pytest
 
