--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,5 +10,6 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.8
+      - run: pip3 install poetry
       - run: poetry install --with test
       - run: poetry run pytest
