--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           python-version: 3.11
       - name: Set version
-        run: sed -i "s~version =.*~version = '$(echo ${{ github.ref }} | sed "s/refs\/tags\///"),~g" pyproject.toml
+        run: sed -i "s/version =.*/version = $(echo -n \"refs/tags/0.5.0\" | sed "s/refs\/tags\///")/" pyproject.toml
       - run: pip3 install --user poetry
       - run: poetry build
       - run: poetry publish
