--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,11 +5,14 @@ on: push
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ["3.10", "3.11"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: ${{ matrix.version }}
       - run: pip3 install poetry
       - run: poetry install --with test
       - run: poetry run pytest
