--- a/tests/test_files/git_clone.yaml
+++ b/tests/test_files/git_clone.yaml
@@ -4,6 +4,9 @@ command:
   - /bin/sh
   - -c
 env:
+  - name: GIT_SYNC_ONE_TIME
+    value: "true"
+    value_from: null
   - name: GIT_SYNC_REPO
     value: repo
     value_from: null
