--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -24,13 +24,16 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.11
-      - run: |
+      - name: Install python dependencies
+        run: |
           pip3 install apache-airflow
           pip3 install poetry
           poetry install
+          pip3 show dataverk-airflow
       - name: Start kind cluster
         uses: helm/kind-action@v1.4.0
-      - run: |
+      - name: Verify cluster up
+        run: |
           kubectl cluster-info
           kubectl get nodes
       - name: Setup cluster for tests
@@ -49,5 +52,7 @@ jobs:
           NAMESPACE: default
           K8S_IMAGE_PULL_SECRETS: ghcr-creds
           CLONE_REPO_IMAGE: ghcr.io/navikt/knada-git-sync/git-sync:2023-10-19-60068e6
+          MARKEDSPLASSEN_HOST: data.ekstern.dev.nav.no
         run: |
           airflow dags list
+          airflow dags list-import-errors
