--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,7 +28,7 @@ jobs:
         run: |
           pip3 install apache-airflow
           pip3 install poetry
-          poetry install
+          pip3 install .
           pip3 show dataverk-airflow
       - name: Start kind cluster
         uses: helm/kind-action@v1.4.0
