actually run DataverkAirflow dag

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -54,3 +54,4 @@ jobs:
           MARKEDSPLASSEN_HOST: data.ekstern.dev.nav.no
         run: |
           airflow dags list
+          airflow dags test DataverkAirflow
