--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -38,6 +38,7 @@ jobs:
         run: |
           kubectl create sa airflow
           kubectl create secret generic github-app-secret --from-literal=test=test
+          kubectl create cm ca-bundle-pem --from-literal=test=test
       - name: Setup Airflow
         run: |
           airflow db reset -y
@@ -52,6 +53,7 @@ jobs:
           K8S_IMAGE_PULL_SECRETS: ghcr-creds
           CLONE_REPO_IMAGE: ghcr.io/navikt/knada-git-sync/git-sync:2023-10-19-301ca18
           MARKEDSPLASSEN_HOST: data.ekstern.dev.nav.no
+          INTEGRATION_TEST: "true"
         run: |
           airflow dags list
           airflow dags test DataverkAirflow
