deliberatly add errors to verify test fails

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -46,6 +46,7 @@ jobs:
           airflow db reset -y
           airflow variables set quarto_token ${{ secrets.QUARTO_TOKEN }}
           echo "AIRFLOW__CORE__DAGS_FOLDER=$(pwd)/dags" >> $GITHUB_ENV
+          airflow dags reserialize
       - name: Run tests
         env:
           AIRFLOW_CONN_SQLITE_DEFAULT: sqlite://?mode=ro
@@ -56,10 +57,8 @@ jobs:
           CLONE_REPO_IMAGE: ghcr.io/navikt/knada-git-sync/git-sync:2023-10-19-301ca18
           MARKEDSPLASSEN_HOST: data.ekstern.dev.nav.no
           INTEGRATION_TEST: "true"
-        run: |
-          airflow dags reserialize
-          airflow dags test DataverkAirflow
-      - name: Verify successful dag test
+        run: airflow dags test DataverkAirflow
+      - name: Verify successful dag tests
         run: |
           airflow dags list-runs -d DataverkAirflow
           
