--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,16 +6,16 @@ on:
       - integration-tests
 
 jobs:
-  # unit-tests:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: 3.11
-  #     - run: pip3 install poetry
-  #     - run: poetry install --with test
-  #     - run: poetry run pytest
+  unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+      - run: pip3 install poetry
+      - run: poetry install --with test
+      - run: poetry run pytest
 
   integration-tests:
     runs-on: ubuntu-latest
