--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,6 +6,10 @@ env:
   GIT_SYNC_IMAGE: ghcr.io/navikt/knada-git-sync/git-sync
   DATAVERK_AIRFLOW_IMAGE: ghcr.io/navikt/knada-images/dataverk-airflow
 
+permissions:
+  contents: read
+  id-token: read
+
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
