--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,8 +3,8 @@ name: Tests
 on: push
 
 env:
-  GIT_SYNC_IMAGE: ghcr.io/navikt/knada-git-sync/git-sync
-  DATAVERK_AIRFLOW_IMAGE: ghcr.io/navikt/knada-images/dataverk-airflow
+  GIT_SYNC_IMAGE: europe-north1-docker.pkg.dev/knada-gcp/knada-north/git-sync
+  DATAVERK_AIRFLOW_IMAGE: europe-north1-docker.pkg.dev/knada-gcp/knada-north/dataverk-airflow
 
 permissions:
   contents: read
