only trigger bucket upload on relevant file changes

--- a/.github/workflows/upload-composer-bucket.yaml
+++ b/.github/workflows/upload-composer-bucket.yaml
@@ -1,6 +1,9 @@
 name: Upload src files for composer bucket test
 
-on: push
+on: 
+  push:
+    paths:
+      - tests-integration/**
 
 permissions:
   contents: read
