--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ classifiers = [
 apache-airflow-providers-cncf-kubernetes = "^7.6.0"
 kubernetes = ">=21.7.0,<24"
 pathlib = "^1.0.1"
-python = "^3.11"
+python = "^3.8"
 apache-airflow-providers-slack = "^8.1.0"
+exceptiongroup = "^1.1.3"
 
 [tool.poetry.group.test.dependencies]
 pyaml = "^23.9.7"
