--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,11 +27,14 @@ jobs:
 
   integration-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ["3.8", "3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: ${{ matrix.version }}
       - id: auth
         name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v1
