--- a/.github/workflows/upload-composer-bucket.yaml
+++ b/.github/workflows/upload-composer-bucket.yaml
@@ -26,6 +26,6 @@ jobs:
           service_account: ci-knada-images@knada-gcp.iam.gserviceaccount.com
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
-      - name: Upload files
+      - name: Upload DAGs for Cloud Composer
         working-directory: tests-integration
         run: gsutil cp -r * gs://dataverk-airflow-tests/tests-integration
