--- a/.github/workflows/upload-composer-bucket.yaml
+++ b/.github/workflows/upload-composer-bucket.yaml
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 jobs:
-  integration-tests:
+  upload-src-files:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
