--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -55,6 +55,7 @@ jobs:
       - name: Setup cluster for tests
         run: |
           kubectl create sa airflow
+          kubectl create ns composer-user-workloads
           kubectl create secret generic github-app-secret --from-literal=test=test
           kubectl create cm ca-bundle-pem --from-literal=test=test
       - name: Setup Airflow
