--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
 apache-airflow-providers-cncf-kubernetes = "^7.3.0"
 kubernetes = ">=21.7.0,<24"
 pathlib = "^1.0.1"
-python = "^3.8"
+python = "^3.8,<3.12"
 apache-airflow-providers-slack = "^8.1.0"
 exceptiongroup = "^1.1.3"
 
@@ -24,6 +24,9 @@ exceptiongroup = "^1.1.3"
 pyaml = "^23.9.7"
 pytest = "^7.4.2"
 pytest-datafiles = "^3.0.0"
+
+[tool.poetry.group.integration-test.dependencies]
+apache-airflow = "^2.7.3"
 
 [build-system]
 requires = ["poetry-core"]
