--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pathlib = "^1.0.1"
 python = "^3.8,<3.12"
 apache-airflow-providers-slack = "^8.1.0"
 exceptiongroup = "^1.1.3"
+knatch = "^1.0.1"
 
 [tool.poetry.group.test.dependencies]
 pyaml = "^23.9.7"
