--- a/tests-integration/dbt/k8s_resources/oracle-db.yaml
+++ b/tests-integration/dbt/k8s_resources/oracle-db.yaml
@@ -15,6 +15,8 @@ spec:
         value: usah
       - name: APP_USER_PASSWORD
         value: pass
+      - name: ORACLE_RANDOM_PASSWORD
+        value: "true"
 ---
 apiVersion: v1
 kind: Service
