--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,12 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
+apache-airflow = "2.9.3"
 apache-airflow-providers-cncf-kubernetes = "^7.3.0"
 kubernetes = ">=21.7.0,<24"
 pathlib = "^1.0.1"
 python = "^3.8,<3.12"
-apache-airflow-providers-slack = "^8.9.0"
+apache-airflow-providers-slack = "^8.8.0"
 exceptiongroup = "^1.2.2"
 knatch = "^1.0.5"
 
@@ -27,7 +28,7 @@ pytest = ">=7.4.2,<9.0.0"
 pytest-datafiles = "^3.0.0"
 
 [tool.poetry.group.integration-test.dependencies]
-apache-airflow = "^2.10.2"
+apache-airflow = "2.9.3"
 
 [build-system]
 requires = ["poetry-core"]
