add apache-airflow current used version (2.9.3) as dependency for tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ exceptiongroup = "^1.2.2"
 knatch = "^1.0.5"
 
 [tool.poetry.group.test.dependencies]
+apache-airflow = "2.9.3"
 pyaml = "^24.9.0"
 pytest = ">=7.4.2,<9.0.0"
 pytest-datafiles = "^3.0.0"
