--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,6 +5,7 @@ on: push
 env:
   GIT_SYNC_IMAGE: europe-north1-docker.pkg.dev/knada-gcp/knada-north/git-sync
   DATAVERK_AIRFLOW_IMAGE_BASE_URL: europe-north1-docker.pkg.dev/knada-gcp/knada-north/dataverk-airflow-python
+  AIRFLOW_PYTHON_VERSION: 3.11
 
 permissions:
   contents: read
@@ -12,15 +13,12 @@ permissions:
 
 jobs:
   unit-tests:
-    strategy:
-      matrix:
-        version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.version }}
+          python-version: ${{ env.AIRFLOW_PYTHON_VERSION }}
       - run: pip3 install poetry
       - run: poetry install --with test
       - run: poetry run pytest
@@ -34,7 +32,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.version }}
+          python-version: ${{ env.AIRFLOW_PYTHON_VERSION }}
       - id: auth
         name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
